--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       <p>London, United Kingdom</p>
       <p>"Front-end developer and avid reader."</p>
     </header>
-    <div>
-      <div>GitHub</div>
-      <div>Frontend Mentor</div>
-      <div>LinkedIn</div>
-      <div>Twitter</div>
-      <div>Instagram</div>
+    <div class="link">
+      <div><p>GitHub</p></div>
+      <div><p>Frontend Mentor</p></div>
+      <div><p>LinkedIn</p></div>
+      <div><p>Twitter</p></div>
+      <div><p>Instagram</p></div>
     </div>
   </section>
 
