mobile design finish

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution a { color:  hsl(75, 94%, 57%); }
   </style>
 </head>
 <body>
@@ -27,11 +27,11 @@
       <p>"Front-end developer and avid reader."</p>
     </header>
     <div class="link">
-      <div><p>GitHub</p></div>
-      <div><p>Frontend Mentor</p></div>
-      <div><p>LinkedIn</p></div>
-      <div><p>Twitter</p></div>
-      <div><p>Instagram</p></div>
+      <div><p><a href="https://github.com/Fabiola971" target="_blank" rel="noopener noreferrer">GitHub</a></p></div>
+      <div><p><a href="https://www.frontendmentor.io/profile/Fabiola971" target="_blank" rel="noopener noreferrer">Frontend Mentor</a></p></div>
+      <div><p><a href="https://www.linkedin.com/in/fabiola-barul/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p></div>
+      <div><p><a href="https://x.com/" target="_blank" rel="noopener noreferrer">Twitter</a></p></div>
+      <div><p><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">Instagram</a></p></div>
     </div>
   </section>
 
