improvement html and css file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <section>
     <header>
-      <img src="assets/images/avatar-jessica.jpeg" alt="Jessica's face" srcset="">
+      <img src="assets/images/avatar-jessica.jpeg" alt="Jessica's face">
       <h1>Jessica Randall</h1>
       <p>London, United Kingdom</p>
       <p>"Front-end developer and avid reader."</p>
